# blas-comparison

./: .gitignore  CMakeLists.txt  README.md  benchmark.py  benchmark_log.txt  main.c  main.cu  main_optimize.cu  pyproject.toml  scipy_solver.py  utils.c  utils.h  verify_all.py
hw4/: CMakeLists.txt
test/: CMakeLists.txt  main_hw4.c
